# Story_Store

./: .gitignore  pyproject.toml  requirements.txt
backend/: .env.example  requirements.txt
backend/api/: index.py
backend/app/: config.py  database.py  main.py
backend/app/middleware/: auth_middleware.py
backend/app/models/: chapter.py  interactions.py  story.py  user.py
backend/app/routers/: auth.py  chapters.py  interactions.py  recommendations.py  stories.py  users.py
backend/app/services/: auth_service.py  file_service.py  interaction_service.py  recommendation_service.py  story_service.py
backend/app/utils/: jwt_handler.py  pyobjectid.py
backend/scripts/: assign_unique_authors_and_covers.py  beautify_stories.py  download_genre_images.py  ensure_unique_titles_authors.py  fix_seeded_user_ids.py  fix_short_titles.py  manual_update_one.py  normalize_chapter_titles.py  seed_more_simple.py  seed_sample_data.py  set_genre_unsplash_covers.py  update_extra_seeds.py  update_stories_to_public_covers.py
backend/tests/: conftest.py  test_auth.py  test_interactions.py  test_recommendations.py  test_story_flow.py
docs/: DATABASE_SCHEMA.md  TESTING.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Footer.jsx  Genres.jsx  Navbar.jsx  ProtectedRoute.jsx  StoryCard.jsx  TrendingStories.jsx
frontend/src/context/: AuthContext.jsx  NotificationContext.jsx
frontend/src/data/: sampleStories.js
frontend/src/pages/: BookmarksPage.jsx  (+9 more)
(+3 files in other folders)
