[project]
name = "story-store"
version = "0.1.0"
description = "Story Store backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.4",
    "uvicorn==0.32.1",
    "gunicorn==23.0.0",
    "pymongo==4.10.1",
    "pydantic==2.10.2",
    "email-validator==2.3.0",
    "python-dotenv==1.0.1",
    "pyjwt==2.10.1",
    "bcrypt==4.2.0",
    "python-multipart==0.0.7",
    "scikit-learn==1.6.1",
    "numpy==2.1.3",
    "requests==2.32.3",
    "python-multipart==0.0.7",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.vercel]
entrypoint = "backend.app.main:app"
